--- a/css/main.scss
+++ b/css/main.scss
@@ -31,7 +31,7 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-$on-screen:        768px;
+$on-screen:        769px;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
